--- a/roles/flannel/tasks/main.yml
+++ b/roles/flannel/tasks/main.yml
@@ -40,6 +40,16 @@
       mode: '0755'
       remote_src: true
 
+- name: Add key in etcd
+  shell: "etcdctl --cert=/etc/kubernetes/pki/etcd/server.crt --key=/etc/kubernetes/pki/etcd/server.key --cacert=/etc/kubernetes/pki/etcd/ca.crt --insecure-skip-tls-verify put /coreos.com/network/config '{ \"Network\": \"10.244.0.0/16\", \"Backend\": {\"Type\": \"vxlan\"}}'"
+  delegate_to: "{{ groups['etcd'][0] }}"
+  run_once: true
+
+- set_fact:
+    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
+  delegate_to: "{{ groups['etcd'][0] }}"
+  run_once: true
+
 - set_fact:
     etcd_cluster: "{% for host in groups['etcd'] %}https://{{hostvars[host]['ip_address']}}:2379{% if not loop.last %},{% endif %}{% endfor %}"
 
