--- a/roles/worker/tasks/pre_requisites.yml
+++ b/roles/worker/tasks/pre_requisites.yml
@@ -2,6 +2,7 @@
   community.general.modprobe:
     name: "{{item}}"
     state: present
+    persistent: present
   loop:
   - overlay
   - br_netfilter
