--- a/roles/common/tasks/certificate_authority.yml
+++ b/roles/common/tasks/certificate_authority.yml
@@ -1,42 +1,48 @@
-  
+
+- name: Delete temporary folder
+  local_action:
+    module: ansible.builtin.file
+    path: "{{ tmp_folder }}"
+    state: absent
+  run_once: true
+
+- name: Create temporary folder
+  local_action:
+    module: ansible.builtin.file
+    path: "{{ tmp_folder }}"
+    state: directory
+  run_once: true
+
 - name: Create CA keys
   local_action:
     module: ansible.builtin.shell
-    cmd: "openssl genrsa -out {{item}}.key 2048"
+    cmd: "openssl genrsa -out {{tmp_folder}}/{{item}}.key 4096"
     args:
-      chdir: /tmp
-      creates: "/tmp/{{item}}.key"
-  run_once: true
+      chdir: "{{ tmp_folder }}"
   loop:
     - ca
     - etcd-ca
     - front-proxy-ca
+  run_once: true
 
-- name: Create CSR
+- name: Copy ca.conf
+  local_action:
+    module: ansible.builtin.copy
+    src: files/ca.conf
+    dest: "{{tmp_folder}}/ca.conf"
+  run_once: true
+
+- name: Create CA certificates
   local_action:
     module: ansible.builtin.shell
-    cmd: "openssl req -new -key {{item.name}}.key -subj \"{{item.subject}}\" -out {{item.name}}.csr"
+    cmd: "openssl req -x509 -new -sha512 -noenc -key {{item.name}}.key -days 3652 -config ca.conf -out {{item.name}}.crt -subj \"{{item.subject}}\""
     args:
-      chdir: /tmp
-      creates: /tmp/{{item.name}}.csr
-  run_once: true
+      chdir: "{{ tmp_folder }}"
   loop:
-    - {name: ca, subject: "/CN=kubernetes-ca"}
-    - {name: etcd-ca, subject: "/CN=etcd-ca"}
-    - {name: front-proxy-ca, subject: "/CN=kubernetes-front-proxy-ca"}
-
-- name: Self sign CSR
-  local_action:
-    module: ansible.builtin.shell
-    cmd: "openssl x509 -req -in {{item}}.csr -signkey {{item}}.key -CAcreateserial -out {{item}}.crt -days 3650"
-    args:
-      chdir: /tmp
-      creates: /tmp/{{item}}.crt
+  - {name: ca, subject: "/CN=kubernetes-ca"}
+  - {name: etcd-ca, subject: "/CN=etcd-ca"}
+  - {name: front-proxy-ca, subject: "/CN=kubernetes-front-proxy-ca"}
   run_once: true
-  loop:
-    - ca
-    - etcd-ca
-    - front-proxy-ca
 
 
 
