--- a/roles/control-plane/tasks/cleanup.yml
+++ b/roles/control-plane/tasks/cleanup.yml
@@ -8,23 +8,25 @@
   loop:
   - "/tmp/kubernetes-server-{{ansible_system | lower}}-{{ arch }}.tar.gz"
   - /tmp/kubernetes
-  - /tmp/apiserver.cnf
+  - /tmp/control-plane.conf
   - /tmp/apiserver-etcd-client.csr
   - /tmp/apiserver-kubelet-client.csr
   - /tmp/apiserver.csr
-  - /tmp/controller-manager.csr
-  - /tmp/scheduler.csr
-  - /tmp/sa.csr
+  - /tmp/kube-controller-manager.csr
+  - /tmp/kube-scheduler.csr
+  - /tmp/service-accounts.csr
   - /tmp/front-proxy-client.csr
   - /tmp/admin.csr
+  - /tmp/etcd-ca.srl
   - /tmp/controller-manager.crt
   - /tmp/scheduler.crt
   - /tmp/admin.key
   - /tmp/controller-manager.key
   - /tmp/scheduler.key
-  - /tmp/sa.crt
   - /tmp/admin.crt
   - /tmp/etcd-ca.crt
   - /tmp/etcd-ca.key
   - /tmp/rbac.yaml
+  - /etc/kubernetes/pki/ca.srl
+  - /etc/kubernetes/pki/front-proxy-ca.srl
   ignore_errors: true
