--- a/roles/control-plane/tasks/main.yml
+++ b/roles/control-plane/tasks/main.yml
@@ -11,45 +11,17 @@
   loop:
     - "{{ ansible_env.HOME }}/.kube"
 
-- block:
-  - name: Download control-plane release
-    ansible.builtin.get_url:
-      url: "{{ download_url }}/v{{ kubernetes_version }}/kubernetes-server-{{ansible_system | lower}}-{{ arch }}.tar.gz"
-      dest: "/tmp"
-      force: false
-      mode: '0755'
-
-  - name: Untar control plane release
-    ansible.builtin.unarchive:
-      src: "/tmp/kubernetes-server-{{ansible_system | lower}}-{{ arch }}.tar.gz"
-      dest: "/tmp"
-      remote_src: true
-
-  - name: Move control plane binaries
-    ansible.builtin.copy:
-      src: "/tmp/kubernetes/server/bin/{{item}}"
-      dest: "/usr/local/bin/{{item}}"
-      mode: '0755'
-      remote_src: true
-    loop:
-      - kube-apiserver
-      - kube-controller-manager
-      - kube-scheduler
-      - kubectl
-  when: not skip_download | default('false') | bool
-
-- block:
-  - name: Copy control plane binaries
-    ansible.builtin.copy:
-      src: "/data/kubernetes/{{ kubernetes_version }}/{{ arch }}/{{ item }}"
-      dest: "/usr/local/bin/{{item}}"
-      mode: '0755'
-    loop:
-      - kube-apiserver
-      - kube-controller-manager
-      - kube-scheduler
-      - kubectl
-  when: skip_download | default('false') | bool
+- name: Download binaries
+  ansible.builtin.get_url:
+    url: "https://dl.k8s.io/v{{ kubernetes_version }}/bin/{{ansible_system | lower}}/{{ arch }}/{{item}}"
+    dest: "/usr/local/bin/{{item}}"
+    mode: '0755'
+    force: false
+  loop:
+   - kube-apiserver
+   - kube-controller-manager
+   - kube-scheduler
+   - kubectl
 
 - set_fact:
     ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
@@ -175,7 +147,7 @@
   ansible.builtin.template:
     src: "{{item}}.service.j2"
     dest: /etc/systemd/system/{{item}}.service
-    mode: '0644'
+    mode: '0600'
     owner: root
     group: root
   loop:
@@ -214,9 +186,11 @@
 
 - name: Apply RBAC
   ansible.builtin.shell: "kubectl apply -f /tmp/rbac.yaml"
+  run_once: true
 
 - name: Install helm
   ansible.builtin.shell: curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+  run_once: true
 
 - name: Install coredns
   ansible.builtin.shell: |
