--- a/roles/charts/tasks/main.yml
+++ b/roles/charts/tasks/main.yml
@@ -23,6 +23,7 @@
     dest: "/tmp/{{item}}"
   loop:
   - helmfile-1.yaml.j2
+  - helmfile-2.yaml.j2
 - name: Copy values files
   copy:
     src: "./files/{{item}}"
@@ -40,6 +41,11 @@
 
 - name: Wait for ingress
   shell: "kubectl -n ingress-nginx rollout status deployment/ingress-nginx-controller"
+
+- name: Install Helm charts
+  shell: "helmfile apply -f helmfile-2.yaml.j2"
+  args:
+    chdir: /tmp
 
 - include_tasks: cleanup.yml
 
