--- a/roles/charts/tasks/cleanup.yml
+++ b/roles/charts/tasks/cleanup.yml
@@ -14,4 +14,5 @@
   - /tmp/ingress-nginx-values.yaml
   - /tmp/metrics-server-values.yaml
   - /tmp/helmfile-1.yaml.j2
+  - /tmp/helmfile-2.yaml.j2
   ignore_errors: true
